# CMake_Learnings

Level_1/prac_1/: CMakeLists.txt  main.cpp  readme
Level_1/prac_2/: CMakeLists.txt  readme
Level_1/prac_2/src/: main.cpp
Level_1/prac_3/: CMakeLists.txt
Level_1/prac_3/src/: CMakeLists.txt
Level_1/prac_4/: CMakeLists.txt  readme
Level_1/prac_4/src/: CMakeLists.txt  main.cpp  math_utils.cpp
Level_1/prac_5/: CMakeLists.txt  readme
Level_1/prac_5/app/: CMakeLists.txt  main.cpp
Level_1/prac_5/src/: CMakeLists.txt
Level_1/prac_6/: CMakeLists.txt  readme
Level_1/prac_6/app/: CMakeLists.txt  main.cpp
Level_1/prac_6/include/: string_utils.hpp
Level_1/prac_6/src/: CMakeLists.txt  string_utils.cpp
Level_1/prac_7/: CMakeLists.txt  readme
Level_1/prac_7/app/: CMakeLists.txt  main.cpp
Level_1/prac_7/include/: feature.hpp
Level_1/prac_7/src/: CMakeLists.txt  feature.cpp
Level_1_R/prac_1/: CMakeLists.txt  main.cpp
Level_1_R/prac_10/INTERFACE/: readme
Level_1_R/prac_10/INTERFACE/app/: CMakeLists.txt  main.cpp
Level_1_R/prac_10/INTERFACE/lib/: CMakeLists.txt  class.cpp
Level_1_R/prac_10/PRIVATE/: CMakeLists.txt  readme
Level_1_R/prac_10/PRIVATE/app/: main.cpp
Level_1_R/prac_10/PRIVATE/include/: header.hpp
Level_1_R/prac_10/PRIVATE/lib/: CMakeLists.txt
Level_1_R/prac_10/PUBLIC/: readme
Level_1_R/prac_10/PUBLIC/lib/: CMakeLists.txt
Level_1_R/prac_11/prac_11/: CMakeLists.txt
Level_1_R/prac_11/prac_11/app/: CMakeLists.txt  main.cpp
Level_1_R/prac_11/prac_11/include/: feature.hpp
Level_1_R/prac_11/prac_11/lib/: CMakeLists.txt  feature.cpp
Level_1_R/prac_12/: script.sh
Level_1_R/prac_12/prac_9_example2/: CMakeLists.txt
Level_1_R/prac_12/prac_9_example2/app/: CMakeLists.txt  main.cpp
Level_1_R/prac_12/prac_9_example2/include/: algorithm.hpp
Level_1_R/prac_12/prac_9_example2/lib/: CMakeLists.txt  algorithm.cpp
Level_1_R/prac_13/: readme  script_for_prac.sh
Level_1_R/prac_13/prac_10/: CMakeLists.txt
Level_1_R/prac_13/prac_10/app/: CMakeLists.txt  main.cpp
Level_1_R/prac_13/prac_10/lib/: CMakeLists.txt  math_utils.cpp
Level_1_R/prac_14/: readme  setup_prac_11.sh
Level_1_R/prac_14/prac_11/: CMakeLists.txt
Level_1_R/prac_14/prac_11/app/: CMakeLists.txt  main.cpp
Level_1_R/prac_14/prac_11/include/: api.hpp
Level_1_R/prac_14/prac_11/lib/: CMakeLists.txt  api.cpp
Level_1_R/prac_15/: setup_prac_12.sh
Level_1_R/prac_15/prac_12/: CMakeLists.txt
Level_1_R/prac_15/prac_12/app/: CMakeLists.txt  main.cpp
Level_1_R/prac_15/prac_12/include/: warnings.hpp
Level_1_R/prac_15/prac_12/lib/: CMakeLists.txt  warnings.cpp
Level_1_R/prac_16/: readme  setup_prac_13.sh
Level_1_R/prac_16/prac_13/: CMakeLists.txt
Level_1_R/prac_16/prac_13/app/: CMakeLists.txt  main.cpp
Level_1_R/prac_17/: readme
Level_1_R/prac_17/prac_13/: CMakeLists.txt
Level_1_R/prac_17/prac_13/lib/: CMakeLists.txt  feature.cpp
Level_1_R/prac_18/: script_11.sh
Level_1_R/prac_18/vars_prac_full/: CMakeLists.txt
Level_1_R/prac_18/vars_prac_full/app/: CMakeLists.txt  main.cpp
Level_1_R/prac_18/vars_prac_full/include/: mode.hpp
Level_1_R/prac_18/vars_prac_full/lib/: CMakeLists.txt  mode.cpp
Level_1_R/prac_2/: CMakeLists.txt  main.cpp
Level_1_R/prac_20/: CMakeLists.txt  readme
Level_1_R/prac_20/app/: CMakeLists.txt  client.cpp  server.cpp
Level_1_R/prac_20/include/: header.hpp
Level_1_R/prac_20/lib/: CMakeLists.txt  header.cpp
Level_1_R/prac_21/: CMakeLists.txt
Level_1_R/prac_21/app/: CMakeLists.txt  client.cpp  server.cpp
Level_1_R/prac_21/include/: header.hpp
Level_1_R/prac_21/lib/: CMakeLists.txt  structure.cpp
Level_1_R/prac_3/: CMakeLists.txt
Level_1_R/prac_3/src/: main.cpp
Level_1_R/prac_4/: CMakeLists.txt  readme
Level_1_R/prac_4/app/: CMakeLists.txt  main.cpp
Level_1_R/prac_4/lib/: CMakeLists.txt  math.cpp
Level_1_R/prac_5/: script_to_code.sh
Level_1_R/prac_5/prac_5/: CMakeLists.txt
Level_1_R/prac_5/prac_5/app/: CMakeLists.txt  main.cpp
Level_1_R/prac_5/prac_5/lib/: CMakeLists.txt  calc.cpp
Level_1_R/prac_6/: setupprac6.sh
Level_1_R/prac_7/: script_to_generate.sh
Level_1_R/prac_7/prac_7/: CMakeLists.txt
Level_1_R/prac_7/prac_7/app/: CMakeLists.txt  main.cpp
Level_1_R/prac_7/prac_7/include/: logger.hpp
Level_1_R/prac_7/prac_7/lib/: CMakeLists.txt  logger.cpp
Level_1_R/prac_8/: script_for_8.sh
Level_1_R/prac_8/prac_8/: CMakeLists.txt
Level_1_R/prac_8/prac_8/app/: CMakeLists.txt  main.cpp
Level_1_R/prac_8/prac_8/include/: config.hpp
Level_1_R/prac_8/prac_8/lib/: CMakeLists.txt  config.cpp
Level_1_R/prac_9/: script_target_compile_Definitions_1.sh
Level_1_R/prac_9/scope_example/: CMakeLists.txt
Level_1_R/prac_9/scope_example/app/: CMakeLists.txt  main.cpp
Level_1_R/prac_9/scope_example/config/: CMakeLists.txt
Level_1_R/prac_9/scope_example/include/: mylib.hpp
Level_1_R/prac_9/scope_example/lib/: CMakeLists.txt  mylib.cpp
